<resources>
    <string name="app_name">CamHi</string>
    <string name="humanoid_alarm">humanoid alarm</string>
    <string name="smart_umanoid_ecognition">Smart Humanoid Recognition</string>
    <string name="alarm_trigger">Alarm Trigger</string>
    <string name="alone_trigger">alone trigger</string>
    <string name="linkage_trigger">linkage trigger</string>
    <string name="open_the_motion_detection">Please open the motion detection alarm</string>
    <string name="human_mode_content">The linkage trigger function must be enabled for both motion detection and humanoid recognition to be effective</string>
    <string name="human_trigger_mode">human trigger mode</string>
    <string name="frame_human_form">frame human form</string>
    <string name="about_and">and</string>
    <string name="about_user_agreement">《Service Agreement》</string>
    <string name="about_user_privacy">《Privacy Policy》</string>
    <string name="scan_tip">Automatically scan the QR code or barcode into the box</string>
    <string name="sysreboot_change_resolution">After modifying the resolution, the device will restart automatically!</string>
    <string name="keep_background">Keep running in the background</string>
    <string name="video_resolution">Resolution</string>
    <string name="audible_alarm_open">Open Acousto-optic Alarm</string>
    <string name="audible_alarm_close">Close Acousto-optic Alarm</string>
    <string name="audible_alarm_auto">Intelligent Acousto-optic Alarm</string>
    <string name="closed_plan_record">Scheduled video has been closed</string>
    <string name="closed_alarm_record">Alarm recording has been turned off</string>
    <string name="tips_open_notification">Please open the notification in the settings</string>
    <string name="change_format_hint">After modifying the video system, the device will restart automatically!</string>
    <string name="notification_channel_name">Equipment alarm</string>
    <string name="no_sd_card">The device is not inserted into the SD card.</string>
    <string name="bit_rate_setting">Stream setting</string>
    <string name="change_bit_hint">After modifying the code stream, the system will automatically restart!</string>
    <string name="alarm_custom">Custom recording</string>
    <string name="failed_record_audio">Record failed, please try again</string>
    <string name="mini_time_record_audio">Recording time is as short as two seconds</string>
    <string name="play_audio_fail">Playback failed</string>
    <string name="give_up_record">Are you sure to give up the current recording?</string>
    <string name="cover_audio">Are you sure to overwrite the current recording file?</string>
    <string name="no_record_audio">You have not recorded a recording file yet</string>
    <string name="send_audio_fail">Application recording failed, please try again</string>
    <string name="send_audio_success">Storage success</string>
    <string name="play_aduio">audition</string>
    <string name="record_aduio">recording</string>
    <string name="stop_play_record">stop</string>
    <string name="first_tips_frame_rate_range">The maximum frame rate range of the first stream is 1–%d</string>
    <string name="second_tips_frame_rate_range">The maximum frame rate range of the second stream is 1–%d</string>
    <string name="first_tips_code_rate_range">The maximum rate range for the first stream is  32–6144</string>
    <string name="second_tips_code_rate_range">The maximum rate range for the second stream is  32–2048</string>
    <string name="first_tips_video_level_range">The first stream video encoding level range is 1–6</string>
    <string name="second_tips_video_level_range">The second stream video encoding level range is 1–6</string>
    <string name="sd_card_formating">The SD card is in formatting</string>
    <string name="sd_card_format_success">Success of SD card formatting</string>
    <string name="sd_card_format_fail">Failure of SD card formatting</string>
    <string name="tips_md_area">Drag to draw a picture area that responds to motion detection:</string>
    <string name="alarm_setting">Set alarm ringing linkage</string>
    <string name="alarm_action">Alarm ringing linkage:</string>
    <string name="alarm_voice">Sound type:</string>
    <string name="alarm_time">Length of time:</string>
    <string name="alarm_alarm_sound">Alarm</string>
    <string name="alarm_barking">Canine bark</string>
    <string name="alarm_sound_type_">Sound type</string>
    <string name="alarm_select_voice">Select the type of sound associated with the alarm:</string>
    <string name="alarm_time_">Length of time:</string>
    <string name="alarm_select_time">Choose the alarm linkage duration</string>
    <string name="search_six_hours">Within six hours of searching, no relevant record was found. Please click on the upper right corner to select another time zone.</string>
    <string name="search_one_hours">Within one hour of searching, no relevant record was found. Please click on the upper right corner to select another time zone.</string>
    <string name="search_half_day">Within half a day of searching, no relevant record was found. Please click on the upper right corner to select another time zone.</string>
    <string name="search_one_day">During the search, no relevant record was found. Please click on the upper right corner to select another time zone.</string>
    <string name="search_one_week">Within a week of searching, no relevant record was found. Please click on the upper right corner to select another time zone.</string>
    <string name="search_custom">Custom search, no relevant record found, please click the upper right corner to select other time interval to try it</string>
    <string name="area_left">Left area</string>
    <string name="area_all">All areas</string>
    <string name="area_right">Right area</string>
    <string name="application_success">Successful application!</string>
    <string name="application_fail">Application failed!</string>
    <string name="toast_user_pass_tolong">The username or password you entered is too long</string>
    <string name="toast_adress_toolong">The address you entered is too long</string>
    <string name="toast_theme_tolong">The subject you typed is too long</string>
    <string name="toast_ssid_tolong">You configure the SSID length is too long!</string>
    <string name="toast_no_space">The SSID and password can not contain spaces</string>
    <string name="psw_no_empty">password should not empty</string>
    <string name="tips_wifi_setting_fail">WIFI settings failed</string>
    <string name="tips_wifi_check_fail">WIFI password error!</string>
    <string name="pup_auto">automatic switch</string>
    <string name="pup_open">Forced to open</string>
    <string name="pup_close">Forced to close</string>
    <string name="xml_switch_view">Switch the view</string>
    <string name="xml_fish_video">Fisheye video</string>
    <string name="xml_pinch_together">1. Available two fingers zoom view video yo!</string>
    <string name="xml_double_enlager">Double-click to enlarge view the area you want to see!</string>
    <string name="xml_select_view_model">Please select the view model you want to watch:</string>
    <string name="xml_current_install_mode">Current installation mode:</string>
    <string name="dimension_content">Auto-scan the QR code / barcode inside the box</string>
    <string name="scanning_begin">Start scanning</string>
    <string name="light_button">flash</string>
    <string name="photograph_album">Album selection</string>
    <string name="check_empty">the content can not be blank</string>
    <string name="tips_goto_add_camera">Go add our camera first</string>
    <string name="tips_sele_share_camera">Select shared camera</string>
    <string name="toast_sele_device">Please select the equipment you want to share!</string>
    <string name="totast_more_ten">You can only share up to 10 devices at a time</string>
    <string name="tips_share_qrcode">Share QR code</string>
    <string name="tips_device_num">Number of devices</string>
    <string name="tips_share_to">share to</string>
    <string name="tips_share">share it</string>
    <string name="toast_scan_fail">Scan failed!</string>
    <string name="toast_device_added">The camera you have added before!</string>
    <string name="toast_confirm_add">Confirm add</string>
    <string name="toast_scanning">Scanning...</string>
    <string name="scann_qrcode_add_camera">Scan two-dimensional code to add sharing camera</string>
    <string name="rf_alarm">RF alarm</string>
    <string name="tips_no_data">no data</string>
    <string name="tips_emptied">Emptied</string>
    <string name="today">Nowadays</string>
    <string name="door">Menci</string>
    <string name="infra">Infrared</string>
    <string name="doorbell">doorbell</string>
    <string name="smoke">smoke</string>
    <string name="gas">Gas</string>
    <string name="all_types">All types</string>
    <string name="before_day">The day before</string>
    <string name="after_day">After the day</string>
    <string name="clear_all_log">Are you sure to clear all locally stored alarm logs?</string>
    <string name="rf_sensor">RF sensor</string>
    <string name="tip_reminder">Tips</string>
    <string name="fish_divide_nine">As shown above, the top panorama mode screen is divided into nine areas</string>
    <string name="fish_dou_elg">Double-click any area above, you can view</string>
    <string name="fish_know">Know it</string>
    <string name="fish_view_model">Select the model of the view:</string>
    <string name="fish_listen">Listen</string>
    <string name="fish_talk">Intercom</string>
    <string name="fish_snap">Screenshot</string>
    <string name="fish_cruise">Cruise</string>
    <string name="fish_top">Top install</string>
    <string name="fish_wall">Wall install</string>
    <string name="no_wifi">No wifi!</string>
    <string name="to_album">Save to album</string>
    <string name="tint_to_album">Confirm to save this video in phone album?</string>
    <string name="success_to_album">Successfully saved to album!</string>
    <string name="tip_no">no</string>
    <string name="alarm_sos">SOS alarm</string>
    <string name="alarm_ring">Ring alarm</string>
    <string name="alarm_door">Magnetic alarm</string>
    <string name="alarm_infra">Infrared alarm</string>
    <string name="alarm_doorbell">Doorbell alarm</string>
    <string name="alarm_smoke">Smoke alarm</string>
    <string name="alarm_gas">Gas alarm</string>
    <string name="item_modify_password">Change Password</string>
    <string name="item_alarm_motion_detection">Alarm Setting</string>
    <string name="item_action_with_alarm">Action with Alarm</string>
    <string name="item_timing_video">Recording Schedule</string>
    <string name="item_audio_setup">Audio Setting</string>
    <string name="item_video_settings">Video Setting</string>
    <string name="item_wifi_settings">Wi-Fi Setting</string>
    <string name="item_sd_card_set">SD Card Setting</string>
    <string name="item_equipment_time_setting">Time Setting</string>
    <string name="item_mailbox_settings">Email Setting</string>
    <string name="item_ftp_settings">FTP Setting</string>
    <string name="item_system_settings">System Setting</string>
    <string name="item_equipment_information">Device Information</string>
    <string name="about_fragment_SDK_version">SDK_version:</string>
    <string name="about_fragment_copyright">CopyRight</string>
    <string name="live_view_light_normal">Normal</string>
    <string name="live_view_light_color">Color</string>
    <string name="live_view_light_auto">Auto</string>
    <string name="live_view_light_open">Open</string>
    <string name="live_view_light_close">Close</string>
    <string name="tip_alear_dowm">The video has been downloaded</string>
    <string name="tip_hint">Prompt</string>
    <string name="tip_knows">I know</string>
</resources>