<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="150dp"
    android:background="@color/popview_bg"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">
    
    <TextView 
        android:id="@+id/item_tv_state"
        android:text="@string/tip_hint"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        />
     
    <TextView 
        android:layout_marginTop="6dp"
        android:id="@+id/item_tv_aleary_down"
        android:text="@string/tip_alear_dowm"
        android:textColor="#666666"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="17sp"
        />
    <ImageView 
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:background="#eeeeee"
        />
    <TextView 
        android:id="@+id/item_tv_know"
        android:text="@string/tip_knows"
        android:textColor="#0080FF"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:textSize="17sp"
        />

</LinearLayout>